--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.25"
   },
-  "homepage": "http://Hyukjoo-Lee.github.io/coinTracker_ReactJS"
+  "homepage": "http://Hyukjoo-Lee.github.io/ReactJS_JFLIX"
 }
