--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^4.0.0-beta.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
+    "types-react-query": "^0.0.2-beta.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
